[project]
name = "google-sheet-util"
version = "0.4.3"
description = "Google Sheet API util. Fill prev-exist sheets with data passing credentials, sheet_id, fieldnames, column_formats and data_dicts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
